# slisp

./: .gitignore  Data.hs  Eval.hs  Main.hs  Makefile  Parser.hs  README.markdown  slisp.cabal
lib/: list.lisp
src/: Main.hs
src/SLISP/: Core.hs  Data.hs  Eval.hs  Parser.hs  Repl.hs  Test.hs
src/SLISP/Util/: IO.hs  System.hs
src/lib/: core.lisp
src/script/: bm  test
test/: core.lisp  list.lisp
test/arith/: 00_add.lisp  01_mul.lisp  02_min.lisp  03_div.lisp  04_not.lisp  05_inc.lisp  06_dec.lisp  07_comp.lisp  08_or.lisp  09_and.lisp  10_infinity.lisp
test/core/: 00_id.lisp  01_null.lisp  02_map.lisp  03_compose.lisp  04_length.lisp  05_cadr.lisp  06_qsort.lisp  08_filter.lisp  09_drop.lisp  10_take.lisp  11_nth.lisp  12_insert.lisp  13_delete.lisp  14_member.lisp  15_any.lisp  16_all.lisp  17_drop_while.lisp  18_take_while.lisp  19_init.lisp  20_last.lisp  21_nub.lisp  22_zip.lisp  23_zip_with.lisp  24_union.lisp  25_iterate.lisp  26_reverse.lisp  27_enum.lisp  28_sum.lisp  29_prod.lisp  30_max.lisp  31_min.lisp  32_arith_mean.lisp  33_foldr.lisp
test/dict/: 00_create.lisp  01_key.lisp  02_value.lisp  03_map.lisp
test/list/: 00_car.lisp  01_cdr.lisp  02_append.lisp  03_cons.lisp
test/parser/: 00_list.lisp  01_fixnum.lisp  02_string.lisp  03_function.lisp  04_quote.lisp  05_funquote.lisp  06_lambda.lisp  07_dict.lisp  08_float.lisp  09_key.lisp
test/state/: 00_defun.lisp  01_setq.lisp  02_let.lisp  03_funcall.lisp  04_apply.lisp  05_eval.lisp  06_quote.lisp  07_if.lisp  08_cond.lisp  09_lambda.lisp  10_env.lisp  11_error.lisp  12_env_error.lisp  13_unsetq.lisp
