Name:                slisp
Version:             0.1
Synopsis:            SLISP is a (very) basic lisp interpreter
Description:         SLISP is a (very) basic lisp interpreter
Homepage:            http://github.com/ameingast/slisp
License:             BSD3
License-file:        LICENSE
Author:              Andreas Meingast
Maintainer:          ameingast@gmail.com
Category:            Language
Build-type:          Simple
Cabal-version:       >= 1.6

Data-Files: src/lib/core.lisp

Extra-source-files: src/SLISP/*.hs src/SLISP/Util/*.hs

Source-repository head
  type: git
  location: http://github.com/ameingast/slisp.git

Executable slisp
  hs-source-dirs: src

  Main-is: Main.hs

  Build-Depends: parsec >= 3
  Build-Depends: base >= 4 && < 5
  Build-Depends: haskell98 >= 1
  Build-Depends: containers >= 0.4
  Build-Depends: haskeline >= 0.6
  
  ghc-options: -Wall -fno-warn-unused-do-bind -O3
  ghc-prof-options: -prof -auto-all
